--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	</properties>
 
 	<profiles>
-	
+
 		<profile>
 			<id>Regression</id>
 			<build>
@@ -55,7 +55,7 @@
 				</pluginManagement>
 			</build>
 		</profile>
-		
+
 	</profiles>
 
 
@@ -75,6 +75,20 @@
 			<artifactId>testng</artifactId>
 			<version>7.1.0</version>
 			<scope>test</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>4.1.2</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>4.1.2</version>
 		</dependency>
 
 	</dependencies>
